# 5g-radio

./: CMakeLists.txt  README.md
include/channel/: Channel.h
include/common/: Logger.h  Types.h
include/mac/: BaseMacScheduler.h  FifoScheduler.h  IMacScheduler.h  MacEntity.h  PriorityScheduler.h
include/rlc/: IRlcEntity.h  IRlcSegmenter.h  RlcEntity.h  RlcPdu.h  RlcSdu.h  RlcSduFactory.h  RlcSegmenter.h  UmRlcSegmenter.h
src/: main.cpp
src/channel/: Channel.cpp
src/mac/: BaseMacScheduler.cpp  FifoScheduler.cpp  MacEntity.cpp  PriorityScheduler.cpp
src/rlc/: RlcEntity.cpp  RlcPdu.cpp  RlcSduFactory.cpp  RlcSegmenter.cpp  UmRlcSegmenter.cpp
test/: TestRlcEntity.cpp  TestRlcSduFactory.cpp  TestRlcSegmenter.cpp
